# Object-oriented-programming

1.1/: Program.cs  String.h
1.1/C++/: main.cpp
Homework/: Program.cs
Kursova_Robota/: EXPLANATORY_NOTE.md  README  README.md  pyproject.toml  run.py
Kursova_Robota/DOCS/: CONTENT_TEMPLATE.md  TITLE_PAGE_TEMPLATE.md
Kursova_Robota/src/task_planner/: __main__.py  ioc.py
Kursova_Robota/src/task_planner/bll/: exceptions.py  models.py  services.py
Kursova_Robota/src/task_planner/dal/: json_repository.py  repository.py
Kursova_Robota/src/task_planner/pl/: cli.py
Kursova_Robota/tests/: test_assignment_relations.py  test_member_crud.py  test_repo_get.py  test_task_search_and_sort.py  test_task_service.py
Lab 1.1/C#/: Lab 1.1.csproj  Program.cs  String.cs
Lab 1.1/C++/: Program.cpp  String.cpp  String.h  a.out  main.cpp
Lab 1.2/: Lab 1.1.sln  Lab 1.2.sln
Lab 1.2/C#/: C#.csproj  Program.cs  Program.csproj  String.cs
Lab 1.2/C#/StringLibrary/: StringManipulator.cs
Lab 1.2/C++/: Program  Program.cpp  String.cpp  String.h  main
Lab 1.2/C++/ConsoleApp/: main.cpp
Lab 1.3/: Lab 1.3.sln
Lab 1.3/C#/: Program.cs  String.cs
Lab 1.3/C++/: Program  String.cpp  String.h
Lab 2.1/C#/: Program.cs  String.cs
Lab 2.1/C++/: Program.cpp  String.cpp  String.h
Lab3.1/: create_test_data.py  main.py  sample_data.txt
Lab3.1/console_interface/: console_menu.py
Lab3.1/entities/: interfaces.py  mountaineer.py  person.py  postman.py  student.py
Lab3.1/file_operations/: data_processor.py  file_manager.py  interfaces.py
(+2 files in other folders)
